--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,2 +1,65 @@
+/* DEFAULT SETTINGS ------------------------------------------ */
+ul {
+  list-style: none;
+  padding: 0; }
+
+a:hover {
+  text-decoration: none; }
+
+/* STARTING PROJECT ------------------------------------------- */
+@font-face {
+  font-family: "Bebas";
+  src: url("../fonts/Bebas.ttf") format("truetype"); }
+
+@font-face {
+  font-family: "Helvetica";
+  src: url("../fonts/Helvetica.ttf") format("truetype"); }
+
 body {
-  color: black; }
+  font-family: "Helvetica";
+  background-color: #101010; }
+
+/* HEADER -------------------------------------------------------- */
+header {
+  width: 90%;
+  margin: auto;
+  margin-top: 45px; }
+
+.infoAboutFilm ul > li > span {
+  color: #fff;
+  font-weight: 400;
+  font-size: 40px;
+  font-family: Bebas;
+  line-height: 48px; }
+
+.infoAboutFilm ul > li:first-child > span {
+  font-size: 100px;
+  letter-spacing: -0.5px;
+  line-height: 60px; }
+
+.infoAboutFilm ul > li:last-child > span {
+  color: #e71e6e;
+  letter-spacing: -0.2px;
+  line-height: 48px; }
+
+.nav .logo > span {
+  text-align: center;
+  color: #e71e6e;
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 48px;
+  letter-spacing: -0.2px; }
+
+.nav .menu {
+  margin-top: 30px; }
+  .nav .menu ul > li {
+    margin-top: 5px;
+    background-color: #e71e6e;
+    padding: 3px 50px;
+    text-align: center; }
+    .nav .menu ul > li > a {
+      color: #fff;
+      font-size: 20px;
+      font-weight: 400;
+      line-height: 29px;
+      letter-spacing: -0.1px; }
