almost made preview block into main section

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -73,3 +73,42 @@ header
 					font-weight: 400
 					line-height: 29px
 					letter-spacing: -0.1px
+
+
+
+
+/* MAIN -------------------------------------------------------------- */
+main 
+	width: 57%
+	margin: auto
+	background-color: #f5f5f5				
+	& .descrptFilm
+		&__text 
+			margin-left: 30px
+			& > p 
+				color: #101010
+				font-size: 18px
+				font-weight: 400
+				letter-spacing: -0.09px
+				margin-top: 20px
+				max-width: 500px
+	& .reviewsFilm
+		margin-top: 35px 
+		& > span 
+			margin-left: 50px
+			padding: 2px 0
+			color: #101010
+			font-size: 18px
+			font-weight: 400
+			line-height: 18px
+			letter-spacing: -0.09px
+			&:first-child
+				margin-left: 0
+				font-size: 24px
+				letter-spacing: -0.12px		
+			&:nth-child(2)
+				background-image: linear-gradient(to right, #B7FFB1 72%, rgba(255,255,255, 0) 18%)			
+			&:nth-child(3)
+				background-image: linear-gradient(to right, #D7D7D7 22%, rgba(255,255,255, 0) 15%)				
+			&:last-child
+				background-image: linear-gradient(to right, #FFB1B1 26%, rgba(255,255,255, 0) 10%)				
