--- a/app/css/main.css
+++ b/app/css/main.css
@@ -79,22 +79,43 @@ main {
       margin-top: 20px;
       max-width: 500px; }
   main .reviewsFilm {
-    margin-top: 35px; }
+    margin: 35px 5%;
+    padding-bottom: 35px; }
     main .reviewsFilm > span {
-      margin-left: 50px;
       padding: 2px 0;
+      padding-left: 5px;
       color: #101010;
       font-size: 18px;
       font-weight: 400;
       line-height: 18px;
       letter-spacing: -0.09px; }
       main .reviewsFilm > span:first-child {
-        margin-left: 0;
+        padding-left: 0;
         font-size: 24px;
         letter-spacing: -0.12px; }
       main .reviewsFilm > span:nth-child(2) {
-        background-image: linear-gradient(to right, #B7FFB1 72%, rgba(255, 255, 255, 0) 18%); }
+        background-image: linear-gradient(to right, #B7FFB1 87%, rgba(255, 255, 255, 0) 18%); }
       main .reviewsFilm > span:nth-child(3) {
         background-image: linear-gradient(to right, #D7D7D7 22%, rgba(255, 255, 255, 0) 15%); }
       main .reviewsFilm > span:last-child {
-        background-image: linear-gradient(to right, #FFB1B1 26%, rgba(255, 255, 255, 0) 10%); }
+        background-image: linear-gradient(to right, #FFB1B1 27%, rgba(255, 255, 255, 0) 10%); }
+
+.momentFromFilm__wrapper {
+  position: relative; }
+
+.momentFromFilm:after {
+  content: '';
+  position: absolute;
+  z-index: 100;
+  background-color: rgba(86, 58, 58, 0.5);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
+
+.momentFromFilm .play {
+  position: absolute;
+  left: calc(50% - 50px);
+  top: calc(50% - 50px);
+  z-index: 101;
+  cursor: pointer; }
