--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -93,22 +93,42 @@ main
 				margin-top: 20px
 				max-width: 500px
 	& .reviewsFilm
-		margin-top: 35px 
+		margin: 35px 5%
+		padding-bottom: 35px
 		& > span 
-			margin-left: 50px
 			padding: 2px 0
+			padding-left: 5px			
 			color: #101010
 			font-size: 18px
 			font-weight: 400
 			line-height: 18px
 			letter-spacing: -0.09px
 			&:first-child
-				margin-left: 0
+				padding-left: 0
 				font-size: 24px
 				letter-spacing: -0.12px		
 			&:nth-child(2)
-				background-image: linear-gradient(to right, #B7FFB1 72%, rgba(255,255,255, 0) 18%)			
+				background-image: linear-gradient(to right, #B7FFB1 87%, rgba(255,255,255, 0) 18%)			
 			&:nth-child(3)
 				background-image: linear-gradient(to right, #D7D7D7 22%, rgba(255,255,255, 0) 15%)				
 			&:last-child
-				background-image: linear-gradient(to right, #FFB1B1 26%, rgba(255,255,255, 0) 10%)				
+				background-image: linear-gradient(to right, #FFB1B1 27%, rgba(255,255,255, 0) 10%)				
+
+.momentFromFilm__wrapper
+	position: relative
+.momentFromFilm 
+	&:after 
+		content: ''
+		position: absolute
+		z-index: 100
+		background-color: rgba(86,58,58,0.5)
+		top: 0 
+		left: 0
+		width: 100%
+		height: 100%
+	& .play 
+		position: absolute
+		left: calc(50% - 50px)
+		top: calc(50% - 50px)
+		z-index: 101	
+		cursor: pointer
