finished custom  adaptivity

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -25,52 +25,56 @@ header {
   margin: auto;
   margin-top: 45px; }
 
-.infoAboutFilm ul > li > span {
-  color: #fff;
-  font-weight: 400;
-  font-size: 40px;
-  font-family: Bebas;
-  line-height: 48px; }
+.infoAboutFilm {
+  position: relative;
+  z-index: 10; }
+  .infoAboutFilm ul > li > span {
+    color: #fff;
+    font-weight: 400;
+    font-size: 40px;
+    font-family: Bebas;
+    line-height: 48px; }
+  .infoAboutFilm ul > li:first-child > span {
+    font-size: 100px;
+    letter-spacing: -0.5px;
+    line-height: 60px; }
+  .infoAboutFilm ul > li:last-child > span {
+    color: #e71e6e;
+    letter-spacing: -0.2px;
+    line-height: 48px; }
 
-.infoAboutFilm ul > li:first-child > span {
-  font-size: 100px;
-  letter-spacing: -0.5px;
-  line-height: 60px; }
-
-.infoAboutFilm ul > li:last-child > span {
-  color: #e71e6e;
-  letter-spacing: -0.2px;
-  line-height: 48px; }
-
-.nav .logo > span {
-  text-align: center;
-  color: #e71e6e;
-  font-size: 40px;
-  font-weight: 400;
-  line-height: 48px;
-  letter-spacing: -0.2px; }
-
-.nav .menu {
-  margin-top: 30px; }
-  .nav .menu ul > li {
-    margin-top: 5px;
-    background-color: #e71e6e;
-    padding: 3px 50px;
-    text-align: center; }
-    .nav .menu ul > li > a {
-      color: #fff;
-      font-size: 20px;
-      font-weight: 400;
-      line-height: 29px;
-      letter-spacing: -0.1px; }
+.nav {
+  display: flex; }
+  .nav .logo > span {
+    text-align: center;
+    color: #e71e6e;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 48px;
+    letter-spacing: -0.2px; }
+  .nav .menu {
+    margin-top: 30px; }
+    .nav .menu ul > li {
+      margin-top: 5px;
+      background-color: #e71e6e;
+      padding: 3px 50px;
+      text-align: center; }
+      .nav .menu ul > li > a {
+        color: #fff;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 29px;
+        letter-spacing: -0.1px; }
 
 /* MAIN -------------------------------------------------------------- */
 main {
   width: 57%;
+  position: relative;
   margin: auto;
-  background-color: #f5f5f5; }
+  background-color: #f5f5f5;
+  padding-bottom: 70px; }
   main .descrptFilm__text {
-    margin-left: 30px; }
+    margin: 0 15px 0 30px; }
     main .descrptFilm__text > p {
       color: #101010;
       font-size: 18px;
@@ -81,27 +85,31 @@ main {
   main .reviewsFilm {
     margin: 35px 5%;
     padding-bottom: 35px; }
-    main .reviewsFilm > span {
+    main .reviewsFilm span {
       padding: 2px 0;
       padding-left: 5px;
       color: #101010;
       font-size: 18px;
       font-weight: 400;
       line-height: 18px;
-      letter-spacing: -0.09px; }
-      main .reviewsFilm > span:first-child {
-        padding-left: 0;
-        font-size: 24px;
-        letter-spacing: -0.12px; }
-      main .reviewsFilm > span:nth-child(2) {
-        background-image: linear-gradient(to right, #B7FFB1 87%, rgba(255, 255, 255, 0) 18%); }
-      main .reviewsFilm > span:nth-child(3) {
-        background-image: linear-gradient(to right, #D7D7D7 22%, rgba(255, 255, 255, 0) 15%); }
-      main .reviewsFilm > span:last-child {
-        background-image: linear-gradient(to right, #FFB1B1 27%, rgba(255, 255, 255, 0) 10%); }
+      letter-spacing: -0.09px;
+      margin: 0 15px; }
+    main .reviewsFilm > span {
+      padding-left: 0;
+      font-size: 24px;
+      letter-spacing: -0.12px; }
+    main .reviewsFilm > div > span:first-child {
+      background-image: linear-gradient(to right, #B7FFB1 87%, rgba(255, 255, 255, 0) 18%); }
+    main .reviewsFilm > div > span:nth-child(2) {
+      background-image: linear-gradient(to right, #D7D7D7 22%, rgba(255, 255, 255, 0) 15%); }
+    main .reviewsFilm > div > span:last-child {
+      background-image: linear-gradient(to right, #FFB1B1 27%, rgba(255, 255, 255, 0) 10%); }
 
 .momentFromFilm__wrapper {
   position: relative; }
+
+.momentFromFilm > img:first-child {
+  width: 100%; }
 
 .momentFromFilm:after {
   content: '';
@@ -119,3 +127,190 @@ main {
   top: calc(50% - 50px);
   z-index: 101;
   cursor: pointer; }
+
+.slider__wrapper {
+  position: relative; }
+  .slider__wrapper .arrows {
+    position: absolute;
+    height: 35px;
+    top: calc(50% - 17.5px);
+    width: 100%;
+    left: 0px;
+    right: 0px; }
+    .slider__wrapper .arrows .prevArrow {
+      position: absolute;
+      height: 35px;
+      left: 45px;
+      cursor: pointer; }
+    .slider__wrapper .arrows .nextArrow {
+      position: absolute;
+      height: 35px;
+      right: 45px;
+      cursor: pointer; }
+
+.slider {
+  width: 75%;
+  margin: 65px auto 0;
+  padding-left: 25px; }
+  .slider .photos img {
+    margin-right: 30px; }
+
+/* FOOTER -------------------------------------------------------------- */
+footer {
+  position: relative;
+  padding: 20px 0; }
+  footer .footerLinks {
+    width: 57%;
+    margin: auto; }
+    footer .footerLinks > span {
+      margin-right: 15px; }
+      footer .footerLinks > span:last-child {
+        margin-right: 0; }
+      footer .footerLinks > span > a {
+        color: #ffffff;
+        font-size: 14px;
+        font-weight: 400;
+        letter-spacing: -0.07px; }
+  footer .deadpool-art {
+    position: absolute;
+    right: 0px;
+    bottom: 0;
+    z-index: -1; }
+
+/* MEDIA REQUEST ------------------------------------------------------- */
+@media all and (min-width: 1700px) {
+  footer .deadpool-art {
+    max-width: 510px; } }
+
+@media all and (max-width: 1400px) {
+  footer .deadpool-art {
+    max-width: 410px; } }
+
+@media all and (max-width: 1200px) {
+  .infoAboutFilm ul > li:first-child > span {
+    font-size: 85px; }
+  .infoAboutFilm ul > li > span {
+    font-size: 37px; }
+  .nav .menu ul > li {
+    padding: 3px 40px; }
+  main .descrptFilm__text > p {
+    font-size: 15px;
+    max-width: 260px; }
+  main .reviewsFilm > span:first-child {
+    font-size: 21px; }
+  main .reviewsFilm > span {
+    font-size: 15px; }
+  .reviewsFilm {
+    flex-direction: column;
+    align-items: flex-start !important;
+    justify-content: flex-start !important; }
+    .reviewsFilm > div {
+      margin: 10px;
+      flex-wrap: wrap; }
+      .reviewsFilm > div > span {
+        margin: 10px; }
+  footer .deadpool-art {
+    max-width: 310px; } }
+
+@media all and (max-width: 991px) {
+  main {
+    width: 57%; }
+  .mob-header {
+    width: 90%;
+    margin: auto;
+    margin-top: 30px; }
+  .deadpoolHeader > img {
+    max-height: 330px; }
+  /*.reviewsFilm
+		& > div
+			flex-direction: column		*/
+  main .reviewsFilm span {
+    font-size: 15px; }
+  .footerLinks {
+    width: 65%; }
+  footer .deadpool-art {
+    max-width: 250px; } }
+
+@media all and (max-width: 768px) {
+  main {
+    width: 70%; }
+  main .descrptFilm__text {
+    margin-left: 20px; }
+  main .descrptFilm__text > p {
+    font-size: 14px; }
+  .deadpoolHeader > img {
+    max-height: 250px; }
+  .slider {
+    padding-left: 34px; }
+  .slider__wrapper .arrows .nextArrow {
+    right: 35px; }
+  .slider__wrapper .arrows .prevArrow {
+    left: 35px; }
+  .footerLinks {
+    width: 70% !important; }
+  footer .deadpool-art {
+    max-width: 120px;
+    bottom: 88px; } }
+
+@media all and (max-width: 576px) {
+  main {
+    width: 78%; }
+  main .descrptFilm__text > p {
+    font-size: 13px; }
+  .descrptFilm {
+    flex-direction: column;
+    align-items: center; }
+  .infoAboutFilm ul > li > span {
+    font-size: 32px; }
+  .infoAboutFilm ul > li:first-child > span {
+    font-size: 55px; }
+  .nav .logo > span {
+    font-size: 35px; }
+  .nav .menu ul > li {
+    padding: 3px 30px; }
+  .deadpoolHeader {
+    max-width: 100%;
+    flex: 0 0 100%; }
+  .momentFromFilm .play {
+    width: 70px;
+    left: calc(50% - 35px);
+    top: calc(50% - 35px); }
+  .slider__wrapper .arrows .nextArrow {
+    right: 25px; }
+  .slider__wrapper .arrows .prevArrow {
+    left: 25px; }
+  .footerLinks {
+    width: 78% !important; }
+  footer .footerLinks > span > a {
+    font-size: 11px; }
+  footer .deadpool-art {
+    display: none; } }
+
+@media all and (max-width: 400px) {
+  main {
+    width: 82%; }
+  .infoAboutFilm ul > li:first-child > span {
+    font-size: 45px; }
+  .nav .logo > span {
+    font-size: 32px; }
+  .nav .menu ul > li {
+    padding: 3px 20px; }
+  .nav .menu ul > li > a {
+    font-size: 15px; }
+  .momentFromFilm .play {
+    width: 60px;
+    left: calc(50% - 30px);
+    top: calc(50% - 30px); }
+  .footerLinks {
+    width: 82% !important;
+    flex-wrap: wrap;
+    justify-content: flex-start !important; }
+  .deadpoolHeader {
+    max-height: 180px; }
+  .logo > img {
+    width: 50px;
+    height: 50px; } }
+
+@media all and (min-width: 991px) {
+  .mob-header {
+    display: none	!important; } }
