--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -52,7 +52,8 @@ header
 					letter-spacing: -0.2px
 					line-height: 48px
 
-
+.deadpoolHeader > img
+	display: none
 
 .nav
 	display: flex 
@@ -64,6 +65,14 @@ header
 			font-weight: 400
 			line-height: 48px
 			letter-spacing: -0.2px
+		& > img:hover + span 
+			transition: 0.5s
+			color: #7E032C
+		& > img:hover
+			transform: rotate3d(2,1,0,180deg)
+			transition: 1s
+
+					
 	& .menu 
 		margin-top: 30px
 		& ul 
@@ -251,9 +260,10 @@ footer
 		width: 90%
 		margin: auto
 		margin-top: 30px
-	.deadpoolHeader
+	.deadpoolHeader	
 		& > img
 			max-height: 330px	
+
 	/*.reviewsFilm 
 		& > div 
 			flex-direction: column		*/
